Completing test with group and memberships